Fixed the position of the jump menu.

--- a/src/components/jump/Jump.css
+++ b/src/components/jump/Jump.css
@@ -1,6 +1,8 @@
 .jump-menu-wrapper {
     background-color: #13293d;
     height: 3.5em;
+    position: fixed;
+    width: inherit;
 }
 
 .jump-menu-item {
